Enable native access for FlatLaf